# kbmd

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yaml
src/kbmd/: cli.py  config.py  jinja_templates.py  models.py
src/kbmd/subcommands/: __init__.py  add.py  build.py  init.py
src/kbmd/templates/: __init__.py  dataset.jinja  index.jinja  project.jinja  root.jinja
tests/: add_test.py  build_test.py  config_test.py  init_test.py  models_test.py  templates_test.py
